--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,35 +1,24 @@
-name: scli # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Simple terminal user interface for Signal. # 79 char long summary
+name: signal-cli # you probably want to 'snapcraft register <name>'
+version: '0.9.1' # just for humans, typically '1.2+git' or '1.3.2'
+summary: A command line client for signal # 79 char long summary
 description: |
-  scli is a simple terminal user interface for Signal. It uses signal-cli and urwid.
+  signal-cli is a commandline client for the Signal messenger service.
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
-base: core18
+confinement: strict # use 'strict' once you have the right plugs and slots
+base: core20
 
 parts:
   signal-cli:
     plugin: dump
-    source: https://github.com/AsamK/signal-cli/releases/download/v0.6.8/signal-cli-0.6.8.tar.gz
-    stage-packages: [openjdk-8-jre, libunixsocket-java]
-
-  scli:
-    plugin: dump
-    source: https://github.com/isamert/scli.git
-    organize:
-      scli: bin/
-    stage-packages: [python3, python3-urwid, qrencode]
+    source: https://github.com/AsamK/signal-cli/releases/download/v0.9.1/signal-cli-0.9.1.tar.gz
+    stage-packages: [openjdk-11-jre, libunixsocket-java, qrencode]
 
 apps:
   signal-cli:
     command: bin/signal-cli
     plugs: [network, home]
     environment:
-      JAVA_HOME: "${SNAP}/usr/lib/jvm/java-8-openjdk-${SNAP_ARCH}"
-
-  scli:
-    command: bin/scli
-    plugs: [home]
+      JAVA_HOME: "${SNAP}/usr/lib/jvm/java-11-openjdk-${SNAP_ARCH}"
 
   qrencode:
     command: usr/bin/qrencode
