--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: signal-cli # you probably want to 'snapcraft register <name>'
+name: lemmy04-signal-cli # you probably want to 'snapcraft register <name>'
 version: '0.9.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A command line client for signal # 79 char long summary
 description: |
