It builds, it installs, it does not work

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ description: |
 ##  - build-on: amd64
 
 confinement: strict # use 'strict' once you have the right plugs and slots
-grade: stable
+grade: edge
 base: core20
 
 parts:
