--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: lemmy04-signal-cli # you probably want to 'snapcraft register <name>'
+name: signal-cli # you probably want to 'snapcraft register <name>'
 version: '0.9.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A command line client for signal # 79 char long summary
 description: |
@@ -8,7 +8,7 @@ description: |
 ##  - build-on: amd64
 
 confinement: strict # use 'strict' once you have the right plugs and slots
-grade: edge
+grade: devel
 base: core20
 
 parts:
@@ -20,11 +20,11 @@ parts:
     - ca-certificates
     - ca-certificates-java
     - libunixsocket-java
-    - qrencode
     stage-packages: 
     - openjdk-11-jre-headless
     - libunixsocket-java
     - qrencode
+    - libc6
 
 apps:
   signal-cli:
